# DBSProject

./: .pdm-python  README.md
.circleci/: config.yml
api/: package.json  pnpm-lock.yaml  pyproject.toml  seed_data.ts  server.ts
api/prisma/: dev.db  schema.prisma
api/prisma/migrations/20240311170438_init/: migration.sql
api/src/api/: app.py  models.py
client/: index.html  package.json  pnpm-lock.yaml
client/src/: index.css  main.tsx
client/src/pages/: AddSupplier.tsx  Budget.tsx  Expenses.tsx  Orders.tsx  Parts.tsx  Suppliers.tsx
scripts/: dbcourse.pem  deploy.ps1  deploy.sh
