[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "CSCI 3461 Group 5" }]
dependencies = [
    "flask[async]>=3.0.2",
    "python-dotenv>=1.0.1",
    "mysql-connector-python>=8.3.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.6.4",
    "pymysql>=1.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "flask --app src.api.app --debug run"
start = "flask --app src.api.app run"
